fix poster overlapping text

--- a/app/assets/stylesheets/components/movie.scss
+++ b/app/assets/stylesheets/components/movie.scss
@@ -20,9 +20,9 @@
     justify-content: space-around;
     align-items: flex-end;
     width: 80%;
-
+  
     > * {
-      padding: 0 5px;
+      padding: 5px;
       font-size: 24px;
       max-width: 60%;
     }
